# datascience_template

./: .gitignore  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 01_eda.ipynb
src/experiments/: experiment01.py
src/production/: __init__.py  __main__.py  calculator.py
tests/test_experiments/: test_experiment01.py
tests/test_production/: test_calculator.py
